# tubesAlpro

./: README.md  controller.py  database.db  model.py  pyproject.toml  view.py
models/: T_Barang.py  T_Daftar.py  T_Struk.py
sql/: delete.py  init.py  select.py  update.py
tests/: test_tubesalpro.py
